# hs-aoc-23

./: CHANGELOG.md  hs-aoc.cabal
app/: Main.hs
input/day9/: sample.txt
src/: Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day8.hs  Day9.hs  Util.hs  day12.py  day17.py
