cabal-version:      2.4
name:               hs-aoc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Miran Lipovaca
maintainer:         m.lipovaca@cargox.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib, Day8, Day9, Day10, Day11, Day12, Day13, Day14, Day15, Util

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.17.2.0,
        containers >=0.6,
        unordered-containers >=0.2.19.1,
        split >=0.2.4,
        array >=0.5.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable hs-aoc
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        hs-aoc

    hs-source-dirs:   app
    default-language: Haskell2010
